--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
             >
             <nav class="bottom-links">
               <a href="terms.html">Privacy</a>
-              <a href="list-account.html">Support</a>
+              <a href="support.html">Support</a>
               <a href="terms.html">Refund Policy</a>
             </nav>
           </div>
